implementacion de grafo, cree el archivo module-info